# basic_haskell

./: .gitignore  basic-haskell.cabal  code_comment.json  data.json  dependencies.json  flake.nix  lines-map.json  logs.json  rust-code.json  rust-logs.json  top_lvl_functions.json  types.json
fieldInspector/: fieldUsage-data.json  typeUpdates-data.json  types-parser-data.json
fieldInspector/src/Haskell/: Basic.hs.fieldUsage.json  Transform.hs.fieldUsage.json  Transform.hs.typeUpdates.json  Transform.hs.types.parser.json  Types.hs.fieldUsage.json  Types.hs.typeUpdates.json  Types.hs.types.parser.json
nix/: haskell-project.nix
src/: Main.hs
src/Haskell/: Basic.hs  Compute.hs  Transform.hs  Types.hs
